--- a/my.cnf
+++ b/my.cnf
@@ -4,7 +4,7 @@
 user            = mysql
 port            = 3306
 socket          = /tmp/mysql.sock
-datadir 	= /home/dbs/mariadb/data
+datadir 	= /data/dbs/mariadb/data
 #binlog_checksum = none
 #slave-skip-errors=1193
 #innodb_force_recovery = 6
@@ -46,17 +46,17 @@ replicate-ignore-db=mysql
 replicate-ignore-db=test
 replicate-ignore-db=information_schema
 tmpdir=/tmp
-relay-log = /home/dbs/mariadb/logs/mysql.relaylog
-relay-log-index = /home/dbs/mariadb/logs/mysql.relaylog.index
-relay-log-info-file=/home/dbs/mariadb/logs/mysql.relaylog.info
-log-bin=/home/dbs/mariadb/logs/mysql.binlog
-log-error=/home/dbs/mariadb/logs/mysqld_error.log
-pid-file=/home/dbs/mariadb/logs/mysqld.pid
+relay-log = /data/dbs/mariadb/logs/mysql.relaylog
+relay-log-index = /data/dbs/mariadb/logs/mysql.relaylog.index
+relay-log-info-file=/data/dbs/mariadb/logs/mysql.relaylog.info
+log-bin=/data/dbs/mariadb/logs/mysql.binlog
+log-error=/data/dbs/mariadb/logs/mysqld_error.log
+pid-file=/data/dbs/mariadb/logs/mysqld.pid
 # Comment the following if you are using InnoDB tables
 
 #skip-innodb
-innodb_log_group_home_dir = /home/dbs/mariadb
-innodb_data_home_dir = /home/dbs/mariadb/data
+innodb_log_group_home_dir = /data/dbs/mariadb
+innodb_data_home_dir = /data/dbs/mariadb/data
 innodb_data_file_path = InnoDB.data:100M:autoextend
 innodb_buffer_pool_size = 1024M
 innodb_additional_mem_pool_size = 16M
